.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:57:13 **** Build of configuration Debug for project Assignmnet day5 3 ****
make all 
Building file: ../src/Assignmnet day5 3.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignmnet day5 3.d" -MT"src/Assignmnet day5 3.o" -o "src/Assignmnet day5 3.o" "../src/Assignmnet day5 3.c"
Finished building: ../src/Assignmnet day5 3.c
 
Building target: Assignmnet day5 3
Invoking: GCC C Linker
gcc  -o "Assignmnet day5 3" ./src/Assignmnet\ day5\ 3.o   
Finished building target: Assignmnet day5 3
 

20:57:14 Build Finished. 0 errors, 0 warnings. (took 668ms)

20:57:23 **** Incremental Build of configuration Debug for project Array search ****
make all 
make: Nothing to be done for 'all'.
20:57:50 **** Incremental Build of configuration Debug for project Array search ****
make all 
make: Nothing to be done for 'all'.
20:59:18 **** Incremental Build of configuration Debug for project Assignmnet day5 3 ****
make all 
Building file: ../src/Assignmnet day5 3.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignmnet day5 3.d" -MT"src/Assignmnet day5 3.o" -o "src/Assignmnet day5 3.o" "../src/Assignmnet day5 3.c"
Finished building: ../src/Assignmnet day5 3.c
 
Building target: Assignmnet day5 3
Invoking: GCC C Linker
gcc  -o "Assignmnet day5 3" ./src/Assignmnet\ day5\ 3.o   
Finished building target: Assignmnet day5 3
 
21:04:26 **** Incremental Build of configuration Debug for project Assignmnet day5 3 ****
make all 
make: Nothing to be done for 'all'.
21:19:30 **** Incremental Build of configuration Debug for project Assignmnet day5 3 ****
make all 
make: Nothing to be done for 'all'.
21:19:35 **** Incremental Build of configuration Debug for project Assignmnet day5 3 ****
make all 
Building file: ../src/Assignmnet day5 3.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignmnet day5 3.d" -MT"src/Assignmnet day5 3.o" -o "src/Assignmnet day5 3.o" "../src/Assignmnet day5 3.c"
../src/Assignmnet day5 3.c: In function ‘main’:
../src/Assignmnet day5 3.c:25:12: error: ‘o’ undeclared (first use in this function)
   25 |      for(i=o;i<limit-1;i++){
      |            ^
../src/Assignmnet day5 3.c:25:12: note: each undeclared identifier is reported only once for each function it appears in
make: *** [src/subdir.mk:20: src/Assignmnet day5 3.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
21:19:49 **** Incremental Build of configuration Debug for project Assignmnet day5 3 ****
make all 
Building file: ../src/Assignmnet day5 3.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignmnet day5 3.d" -MT"src/Assignmnet day5 3.o" -o "src/Assignmnet day5 3.o" "../src/Assignmnet day5 3.c"
Finished building: ../src/Assignmnet day5 3.c
 
Building target: Assignmnet day5 3
Invoking: GCC C Linker
gcc  -o "Assignmnet day5 3" ./src/Assignmnet\ day5\ 3.o   
Finished building target: Assignmnet day5 3
 
21:20:15 **** Incremental Build of configuration Debug for project Assignmnet day5 3 ****
make all 
Building file: ../src/Assignmnet day5 3.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignmnet day5 3.d" -MT"src/Assignmnet day5 3.o" -o "src/Assignmnet day5 3.o" "../src/Assignmnet day5 3.c"
Finished building: ../src/Assignmnet day5 3.c
 
Building target: Assignmnet day5 3
Invoking: GCC C Linker
gcc  -o "Assignmnet day5 3" ./src/Assignmnet\ day5\ 3.o   
Finished building target: Assignmnet day5 3
 
21:20:38 **** Incremental Build of configuration Debug for project Assignmnet day5 3 ****
make all 
Building file: ../src/Assignmnet day5 3.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignmnet day5 3.d" -MT"src/Assignmnet day5 3.o" -o "src/Assignmnet day5 3.o" "../src/Assignmnet day5 3.c"
Finished building: ../src/Assignmnet day5 3.c
 
Building target: Assignmnet day5 3
Invoking: GCC C Linker
gcc  -o "Assignmnet day5 3" ./src/Assignmnet\ day5\ 3.o   
Finished building target: Assignmnet day5 3
 
